<resources>
    <string name="app_name">doomi</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Opciones</string>
    <string name="title_activity_categorias">Categorias</string>
    <string name="title_activity_productos">Productos</string>
    <string name="title_activity_producto_pedido">ProductoPedido</string>
    <string name="title_activity_producto_pedidos">ProductoPedidos</string>

    <string name="producto">Producto</string>
    <string name="nombredireccion">Nombre</string>
    <string name="direccion">Direccion</string>
    <string name="barrio">Barrio</string>
    <string name="referencia">Referencia</string>
    <string name="guardar">Guardar</string>
    <string name="etnombre">Mi casa, Mi Trabajo,Casa Abuela</string>
    <string name="etdireccion">Calle 12a #41a - 74</string>
    <string name="etbarrio">Altos de la colina</string>
    <string name="etreferencia">Casa, Apartamento 303,Oficina</string>
    <string name="descripcion">Descripcion</string>
    <string name="precio">Precio</string>
    <string name="cantidad">Cantidad</string>
    <string name="observacion">Observacion</string>
    <string name="btnaddcarrito">Agregar al Carrito</string>
    <string name="btnverpedido">Revisa tu Pedido = $0</string>
    <string name="title_activity_carrito">Carrito</string>
    <string name="title_activity_editar_pedido">EditarPedido</string>
    <string name="btn_editar_pedido">Guardar Pedido</string>
    <string name="btn_confirmar">Confirmar compra</string>
    <string name="drawer_open">Abrir navigation drawer</string>
    <string name="drawer_close">Cerrar navigation drawer</string>
    <string name="email">Correo Electronico</string>

    <string name="password">Contraseña</string>
    <string name="login">Iniciar sesion</string>
    <string name="signup">Registrate</string>
    <string name="nuevoen">Nuevo en Doomi?  Registrate > </string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="celular">Numero Celular</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >Find People</item>
        <item >Photos</item>
        <item >Communities</item>
        <item >Pages</item>
        <item >What\'s Hot</item>
    </string-array>
    <string name="title_activity_prueba_slider">pruebaSlider</string>
    <string name="title_activity_add_direcciones">AddDirecciones</string>
    <string name="title_activity_direcciones">Direcciones</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="logout">Cerrar sesion</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_activity_maps">ActivityMaps</string>

    <string name="ubicacion">Ubicación, Dirección</string>
</resources>
